force-app/main/default/objects/Equipment__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <length>100</length>
    <type>Text</type>
    <description>Physical location of the equipment</description>
</CustomField> 