force-app/main/default/objects/Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PVCU</fullName>
            </value>
            <value>
                <fullName>VR_AR_Kit</fullName>
                <label>VR/AR Kit</label>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of equipment for booking purposes</description>
</CustomField> 