force-app/main/default/objects/Equipment__c/fields/External_Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Equipment_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Equipment ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
    <description>External API ID for equipment synchronization</description>
</CustomField> 