force-app/main/default/objects/Equipment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
    <description>Active status of the equipment</description>
</CustomField> 