force-app/main/default/objects/Equipment__c/fields/Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Available</label>
    <type>Checkbox</type>
    <description>Current availability status of the equipment</description>
</CustomField> 